--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 spring.application.name=MBTI
-spring.datasource.url=jdbc:postgresql://localhost:5432/postgres
-spring.datasource.username=postgres
-spring.datasource.password=postgrestest
+spring.datasource.url=jdbc:postgresql://dpg-d1it4qadbo4c73blm5c0-a:5432/personality_t2sx
+spring.datasource.username=personality_t2sx_user
+spring.datasource.password=h8YQn5PuiudgqXTEWwYeefXocXMFoRkA
 spring.datasource.driver-class-name=org.postgresql.Driver
 
 spring.jpa.hibernate.ddl-auto=update
