--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,10 +1,10 @@
 spring.application.name=MBTI
-spring.datasource.url=jdbc:postgresql://dpg-d1it4qadbo4c73blm5c0-a:5432/personality_t2sx
+spring.datasource.url=jdbc:postgresql://dpg-d1it4qadbo4c73blm5c0-a.oregon-postgres.render.com:5432/personality_t2sx?sslmode=require
 spring.datasource.username=personality_t2sx_user
 spring.datasource.password=h8YQn5PuiudgqXTEWwYeefXocXMFoRkA
 spring.datasource.driver-class-name=org.postgresql.Driver
+spring.jpa.hibernate.ddl-auto=none
 
-spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 
